fix: double scrolling on page top and bottom

--- a/src/sass/_common/loading.scss
+++ b/src/sass/_common/loading.scss
@@ -92,7 +92,6 @@
 }
 
 #content-holder {
-    height: 100vh;
     background-repeat: no-repeat;
     background-position: center;
 }
